--- a/aula_karate/pom.xml
+++ b/aula_karate/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
  
     <groupId>aula.inatel</groupId>
-    <artifactId>aula_karate</artifactId>
+    <artifactId>aula_inatel</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
  
